[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/misc/firstHook.png" type="Texture" id=1]
[ext_resource path="res://scenes/fishHook.gd" type="Script" id=2]
[ext_resource path="res://art/misc/wormHook2.png" type="Texture" id=3]
[ext_resource path="res://art/misc/rubberFish.png" type="Texture" id=4]
[ext_resource path="res://art/misc/shinyLure.png" type="Texture" id=5]
[ext_resource path="res://art/misc/wormHook1.png" type="Texture" id=6]
[ext_resource path="res://art/misc/iLure.png" type="Texture" id=7]
[ext_resource path="res://art/misc/breadHook.png" type="Texture" id=8]
[ext_resource path="res://scenes/Sprite.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 36.0
height = 4.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "rubber",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "bread",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "worm",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "ilure",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "shiny",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[node name="fishHook" type="RigidBody2D"]
collision_mask = 16
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.6, 1.601 )
frames = SubResource( 3 )
animation = "worm"
frame = 1
playing = true
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
drag_margin_top = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="biteBox" type="Area2D" parent="."]
collision_mask = 2

[node name="biteBoxShape" type="CollisionShape2D" parent="biteBox"]
shape = SubResource( 2 )

[node name="fishHolder" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 16

[connection signal="body_entered" from="biteBox" to="." method="_on_biteBox_body_entered"]
